<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".CheckOutActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add" />

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <fontsmaterialuiux.Raleway_Bold_TextView
        android:id="@+id/id_Title_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:layout_margin="16dp"
        android:text="@string/payment"
        android:textColor="@color/secondaryTextColor"
        android:textSize="28sp" />

    <RelativeLayout
        android:id="@+id/id_recycler_address"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/id_Title_tx">

        <ImageView
            android:id="@+id/id_image_card"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/card" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/id_image_card"
            android:layout_margin="23dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <fontsmaterialuiux.Raleway_Regular_TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"
                    android:textColor="@color/thirdTextColor"
                    android:textSize="18sp" />

                <fontsmaterialuiux.Raleway_Regular_TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="$45.00"
                    android:textColor="@color/thirdTextColor"
                    android:textSize="18sp" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <fontsmaterialuiux.Raleway_Regular_TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discount"
                    android:textColor="@color/thirdTextColor"
                    android:textSize="18sp" />

                <fontsmaterialuiux.Raleway_Regular_TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="3%"
                    android:textColor="@color/thirdTextColor"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <fontsmaterialuiux.Raleway_Regular_TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shipping"
                    android:textColor="@color/thirdTextColor"
                    android:textSize="18sp" />

                <fontsmaterialuiux.Raleway_Regular_TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="$25"
                    android:textColor="@color/thirdTextColor"
                    android:textSize="18sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#d2d2d2" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <fontsmaterialuiux.Raleway_Regular_TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp" />

                <fontsmaterialuiux.Raleway_Regular_TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="$70"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp" />

            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>


    <Button
        android:id="@+id/id_continue"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/ic_background_continue"
        android:paddingTop="4dp"
        android:text="CONTINUE"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp" />


</RelativeLayout>